# BattleForDawnridge

./: .gitattributes  .gitignore  AddHpEvent.hpp  AddResourceEvent.cpp  AddResourceEvent.hpp  AddResourcesEvent.cpp  AddResourcesEvent.hpp  Animated.cpp  Animated.hpp  Animation.cpp  Animation.hpp  AnimationState.cpp  Arable.cpp  Arable.hpp  ArableSpec.cpp  ArableSpec.hpp  ArchiveType.hpp  AreaB.cpp  AreaB.hpp  AreaBLandscapeInsensible.cpp  AreaBLandscapeInsensible.hpp  AreaBLandscapeSensible.cpp  AreaBLandscapeSensible.hpp  AreaControllerSpec.cpp  AreaControllerSpec.hpp  AreaResourcePointCollectorSpec.cpp  AreaResourcePointCollectorSpec.hpp  Balance.cpp  Balance.hpp  Barracks.cpp  Barracks.hpp  BarracksSpec.cpp  BarracksSpec.hpp  BattleForDawnridge.sln  BattleForDawnridge.vcxproj  BattleForDawnridge.vcxproj.filters  BattleScreen.cpp  BattleScreen.hpp  BigArrow.cpp  BigArrow.hpp  (+672 more)
data/images/gameObjects/resourcePoints/: desktop.ini
linux/: CMakeLists.txt
none-vs/: CMakeLists.txt
resources/: README.txt  en.txt  language.txt  ridge.tmx  ru.txt
resources/configs/: balance.cfg  is_server.cfg  main_server_position.cfg  parameters.cfg  ports.cfg  server_ip.cfg
resources/infantryman/: desktop.ini
resources/levels/: lake.tmx  ridge.tmx  river.tmx  test.tmx
resources/levels/tilesets/: forest.tsx  mountains.tsx  tmx_tileset.tsx  water.tsx
resources/locales/: en-base.cfg  en.cfg  ru-base.cfg  ru.cfg
src/: Academy.cpp  Academy.hpp  AcademySpec.cpp  AcademySpec.hpp  AddHpEvent.cpp  AddHpEvent.hpp  AddResourcesEvent.cpp  AddResourcesEvent.hpp  AnimationState.hpp  Arable.cpp  Arable.hpp  ArableSpec.cpp  ArableSpec.hpp  ArchiveType.hpp  AreaResourcePoint.cpp  AreaResourcePoint.hpp  Barbar.cpp  Barbar.hpp  Barracks.cpp  Barracks.hpp  BarracksSpec.cpp  BarracksSpec.hpp  BattleScreen.cpp  BattleScreen.hpp  BigArrow.cpp  BigArrow.hpp  BlackKnight.cpp  BlackKnight.hpp  BuildButtonSpec.cpp  BuildButtonSpec.hpp  BuildEvent.cpp  BuildEvent.hpp  Building.cpp  Building.hpp  BuildingHorizontalSelectionWindowComponent.hpp  BuildingMode.cpp  BuildingMode.hpp  BuildingShortInfo.cpp  BuildingShortInfo.hpp  BuildingStatePointer.cpp  (+764 more)
src/SfmlTextAline/: SfmlTextAline.cpp
src/eos/: portable_archive_exception.hpp  portable_iarchive.hpp  portable_oarchive.hpp
src/serialize-tuple/: serialize_tuple.h
userdata/: language.cfg  language.txt
